# VideoChat

./: .gitignore  README.md  VideoChatDesign.txt
Design & POC/: VideoChatDesign.cpp
Design & POC/Server/: .gitignore  CMakeLists.txt
Design & POC/Server/src/: Main.cpp
Dev/: VideoChat.sln
Dev/VideoChat/: VideoChat.vcxproj
Dev/VideoChat/Debug/: VideoChat.exe.recipe  vc142.idb
Dev/VideoChatClient/: Main.cpp  VideoChatClient.sln  VideoChatClient.vcxproj  VideoChatClient.vcxproj.filters
Dev/VideoChatClient/AutoCloseSocket/: AutoCloseSocket.cpp  AutoCloseSocket.hpp
Dev/VideoChatClient/AutoInitWinSock/: AutoInitWinSock.cpp  AutoInitWinSock.hpp
Dev/VideoChatClient/ClientStartup/: ClientStartup.cpp  ClientStartup.hpp
Dev/VideoChatClient/Common/: Common.hpp
Dev/VideoChatClient/Input/: AudioInput.cpp  IInput.hpp  (+5 more)
Dev/VideoChatServer/: .gitignore  CMakeLists.txt  Main.cpp  VideoChatServer.vcxproj
Dev/VideoChatServer/Debug/VideoChatServer.tlog/: VideoChat.lastbuildstate
Dev/VideoChatServer/src/: Main.cpp
Dev/VideoChatServer/x64/Debug/: VideoChat.exe.recipe  VideoChatServer.exe.recipe  vc142.idb
Dev/VideoChatServer/x64/Debug/VideoChat.tlog/: CL.command.1.tlog  link.command.1.tlog  link.write.1.tlog
Dev/VideoChatServer/x64/Debug/VideoChatServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VideoChatServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Server/: CMakeLists.txt
Server/src/: server.cpp
Testing/Client Tests/: ClientSenderSanity.py  ServerListenerSanity.py  TestClient.py
Testing/Common/: Common.py
(+37 files in other folders)
